# non-photorealistic-rendering

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: buda_n.bix  esfera_961.bix  halo.bix  prog.fs  prog.vs  spider.bix
data/shaders/: base.fs  base.vs  blinn-phong.fs  gooch.fs  phong.fs  phong.vs  pixel.fs  pixel.vs  pixel1.fs  pixel2.fs  pixelArt.fs  pixelArt.vs  toon.fs  toon.vs
include/: GpO.h
include/stb/: stb_image.h
src/: GPO_aux.cpp  GPO_gui.cpp  GPO_postprocessing.cpp  GPO_proyecto_final.cpp  GPO_second_render.cpp  REAME.md
